# gnss-sdr-monitor

./: README.md
src/: CMakeLists.txt  ephemeris_widget.cpp  ephemeris_widget.h  gps_ephemeris_wrapper.cpp  gps_ephemeris_wrapper.h  main_window.cpp  main_window.h  preferences_dialog.cpp  preferences_dialog.ui  skyplot_widget.cpp  skyplot_widget.h
src/protobuf/: gnss_synchro.proto
